2004-02-11  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c (game_about_callback): translator_credits ->
	translator-credits.

2004-01-29  Callum McKenzie  <callum@physics.otago.ac.nz>

	* shapes.svg: Updates from Richard Hoelscher.

2004-01-21  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c (button_press_event): Ignore double and triple
	clicks. Just like for Mahjongg. Richard Hoelscher pointed this out
	in bug #132010.

2004-01-20  Callum McKenzie  <callum@physics.otago.ac.nz>

	* balls.svg: Reworked version from Richard Hoelscher. Smaller file
	and wobble-free graphics.

2004-01-10  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c (field_expose_event): Shrink the event area by one so
	we don't try drawing grid cells that aren't there. Jon McCann
	spotted this.
	
2004-01-09  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c (check_goal): Make sure we don't miss "accidental"
	completions. Fixes bug #130291.

	* Makefile.am (pixmap_DATA): Added shapes.svg; a colour-blind
	friendly theme.

2004-01-08  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.schemas.in:
	* glines.h:
	* glines.c: Remember the window size. Removed some unused
	code. Reworked the layout of the "Next balls" and "Score" 
	section.

2004-01-07  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c: Minor bug fixes fom previous work: "Next Balls" is
	bold again. The expose code doesn't miss tiles anymore.

2004-01-06  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.schemas.in: Set balls.svg to be the new default since it
	shows off the resizing routines to the best advantage.

	* glines.c: The resizing work is basically finished. The window
	size isn't remembered yet and there is an expose bug when a window
	is dragged quickly across it. Aside from that it works well.

2004-01-05  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c: More resizing work and switch over to using the