@@ -2,13 +2,13 @@ To be done before 2.5 code freeze (23 February 2004):
 
 Aisleriot:
         - Occasional crashes with seahaven: have they been fixed ?
-        - Document statistics dialog.
         - Stock pile click/drag/release = click bug.
         - "Ignoring the separator setting", has gtk_dialog done away with this ?
 
 Blackjack:
         - Crasher (125523)
-        - Occasional warning on the command line.
+        - Occasional warning on the command line (race condition with
+          drawing code, may be related to 125523).
 
 Gataxx:
         - Crasher (132438) if info comes through.
