@@ -1,3 +1,8 @@
+2004-02-11  Richard Hoelscher  <rah@rahga.com>
+
+	* properties.c (gconf_set_background_color): Set saving background
+	color as a 12-digit hex triplet. Bug #134179.
+
 2004-02-11  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* menu.c (about_cb): translator_credits ->
