@@ -1,3 +1,8 @@
+2004-02-11  Richard Hoelscher  <rah@rahga.com>
+
+	* mahjongg.c (bg_colour_callback): Set saving background color
+	as a 12-digit hex triplet. Bug #134179.
+
 2004-02-11  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* mahjongg.c (about_callback): translator_credits ->
